correction semantique + correction style

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -32,210 +32,228 @@
                 </div>
             </div>
             <div class="restaurantPage__menu">
-                <div class="menuCategory">
+                <section class="menuCategory">
                     <h2 class="menuCategory__title">
                         ENTRÉES
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Fricassée d'escargot
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Au piment d'espelette
-                                    </p>
-                                    <p class="menuCard__price">
-                                        25€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Fricassée d'escargot
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Au piment d'espelette
+                                        </p>
+                                        <p class="menuCard__price">
+                                            25€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Foie gras de canard mi-cuit
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et ses copeaux de truffe noire
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Foie gras de canard mi-cuit
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et ses copeaux de truffe noire
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Oeuf au plat
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Assaisonné à la truffe sur lit de caviar
-                                    </p>
-                                    <p class="menuCard__price">
-                                        20€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Oeuf au plat
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Assaisonné à la truffe sur lit de caviar
+                                        </p>
+                                        <p class="menuCard__price">
+                                            20€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-1">
+                </section>
+                <section class="menuCategory delay-1">
                     <h2 class="menuCategory__title">
                         PLATS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Filet de boeuf aux herbes
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Accompagné de sa ribambelle de légumes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        40€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Filet de boeuf aux herbes
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Accompagné de sa ribambelle de légumes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            40€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Parmentier de queue de boeuf
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        À la truffe noire sur sa purée de panais
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Parmentier de queue de boeuf
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            À la truffe noire sur sa purée de panais
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Filet de turbot
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Aux agrumes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        44€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Filet de turbot
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Aux agrumes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            44€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-2">
+                </section>
+                <section class="menuCategory delay-2">
                     <h2 class="menuCategory__title">
                         DESSERTS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Paris-Brest
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Revisité
-                                    </p>
-                                    <p class="menuCard__price">
-                                        18€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Paris-Brest
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Revisité
+                                        </p>
+                                        <p class="menuCard__price">
+                                            18€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Macaron au chocolat d'exception
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et glace à la vanille de Madagascar
-                                    </p>
-                                    <p class="menuCard__price">
-                                        22€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Macaron au chocolat d'exception
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et glace à la vanille de Madagascar
+                                        </p>
+                                        <p class="menuCard__price">
+                                            22€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Mousse au chocolat
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Au piment d'Espelette et à la truffe noire
-                                    </p>
-                                    <p class="menuCard__price">
-                                        23€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Mousse au chocolat
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Au piment d'Espelette et à la truffe noire
+                                        </p>
+                                        <p class="menuCard__price">
+                                            23€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
+                </section>
             </div>
             <div class="restaurantPage__orderButton">
                 <button>
@@ -266,7 +284,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="footer__link">
+                    <a href="mailto:contact@ohmyfood.com" class="footer__link">
                         Contact
                     </a>
                 </li>
