--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -31,210 +31,228 @@
                 </div>
             </div>
             <div class="restaurantPage__menu">
-                <div class="menuCategory">
+                <section class="menuCategory">
                     <h2 class="menuCategory__title">
                         ENTRÉES
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Tartare de thon
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Assaisonné au yuzu
-                                    </p>
-                                    <p class="menuCard__price">
-                                        25€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Tartare de thon
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Assaisonné au yuzu
+                                        </p>
+                                        <p class="menuCard__price">
+                                            25€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Bouchée de homard croustillant
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et sa farandole de petits légumes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Bouchée de homard croustillant
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et sa farandole de petits légumes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Velouté de cèpes
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Aux truffes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        20€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Velouté de cèpes
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Aux truffes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            20€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-1">
+                </section>
+                <section class="menuCategory delay-1">
                     <h2 class="menuCategory__title">
                         PLATS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Poulet rôti aux herbes de Provence
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et sa crème de truffe
-                                    </p>
-                                    <p class="menuCard__price">
-                                        40€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Poulet rôti aux herbes de Provence
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et sa crème de truffe
+                                        </p>
+                                        <p class="menuCard__price">
+                                            40€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Langouste rôtie
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et ses légumes de saison
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Langouste rôtie
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et ses légumes de saison
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Côte de boeuf Angus
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et sa purée de panais
-                                    </p>
-                                    <p class="menuCard__price">
-                                        44€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Côte de boeuf Angus
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et sa purée de panais
+                                        </p>
+                                        <p class="menuCard__price">
+                                            44€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-2">
+                </section>
+                <section class="menuCategory delay-2">
                     <h2 class="menuCategory__title">
                         DESSERTS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Farandole de desserts
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Du chef
-                                    </p>
-                                    <p class="menuCard__price">
-                                        18€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Farandole de desserts
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Du chef
+                                        </p>
+                                        <p class="menuCard__price">
+                                            18€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Crème brulée
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Revisitée
-                                    </p>
-                                    <p class="menuCard__price">
-                                        22€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Crème brulée
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Revisitée
+                                        </p>
+                                        <p class="menuCard__price">
+                                            22€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Tiramisu
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        À la noisette
-                                    </p>
-                                    <p class="menuCard__price">
-                                        23€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Tiramisu
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            À la noisette
+                                        </p>
+                                        <p class="menuCard__price">
+                                            23€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
+                </section>
             </div>
             <div class="restaurantPage__orderButton">
                 <button>
@@ -265,7 +283,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="footer__link">
+                    <a href="mailto:contact@ohmyfood.com" class="footer__link">
                         Contact
                     </a>
                 </li>
