--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -31,210 +31,228 @@
                 </div>
             </div>
             <div class="restaurantPage__menu">
-                <div class="menuCategory">
+                <section class="menuCategory">
                     <h2 class="menuCategory__title">
                         ENTRÉES
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Tartare de poulpe acidulé
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Aux zestes d'orange
-                                    </p>
-                                    <p class="menuCard__price">
-                                        25€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Tartare de poulpe acidulé
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Aux zestes d'orange
+                                        </p>
+                                        <p class="menuCard__price">
+                                            25€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Velouté de légumes d'antan
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Carotte, panais, topinambour
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Velouté de légumes d'antan
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Carotte, panais, topinambour
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Soupe à l'oignon
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Revisité
-                                    </p>
-                                    <p class="menuCard__price">
-                                        20€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Soupe à l'oignon
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Revisité
+                                        </p>
+                                        <p class="menuCard__price">
+                                            20€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-1">
+                </section>
+                <section class="menuCategory delay-1">
                     <h2 class="menuCategory__title">
                         PLATS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Coquilles Saint-Jacques
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Accompagnées d'une purée de panais
-                                    </p>
-                                    <p class="menuCard__price">
-                                        40€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Coquilles Saint-Jacques
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Accompagnées d'une purée de panais
+                                        </p>
+                                        <p class="menuCard__price">
+                                            40€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Magret de canard
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et parmentier de pommes de terre
-                                    </p>
-                                    <p class="menuCard__price">
-                                        35€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Magret de canard
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et parmentier de pommes de terre
+                                        </p>
+                                        <p class="menuCard__price">
+                                            35€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Pigeonneau d’Ille-et-Vilaine 
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Sur son lit de gnocchis aux légumes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        44€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Pigeonneau d’Ille-et-Vilaine 
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Sur son lit de gnocchis aux légumes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            44€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
-                <div class="menuCategory delay-2">
+                </section>
+                <section class="menuCategory delay-2">
                     <h2 class="menuCategory__title">
                         DESSERTS
                     </h2>
                     <hr/>
                     <ol>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Pétales de violettes glacés
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Et purée de noisettes
-                                    </p>
-                                    <p class="menuCard__price">
-                                        18€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Pétales de violettes glacés
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Et purée de noisettes
+                                        </p>
+                                        <p class="menuCard__price">
+                                            18€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Fondant au chocolat
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Revisité
-                                    </p>
-                                    <p class="menuCard__price">
-                                        22€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Fondant au chocolat
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Revisité
+                                        </p>
+                                        <p class="menuCard__price">
+                                            22€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                         <li class="menuCard">
-                            <div class="menuCard__details">
-                                <h3 class="menuCard__title">
-                                    Millefeuille croustillant 
-                                </h3>
-                                <div class="menuCard__description">
-                                    <p>
-                                        Myrtilles et pâte d’amande
-                                    </p>
-                                    <p class="menuCard__price">
-                                        23€
-                                    </p>
+                            <article>
+                                <div class="menuCard__details">
+                                    <h3 class="menuCard__title">
+                                        Millefeuille croustillant 
+                                    </h3>
+                                    <div class="menuCard__description">
+                                        <p class="menuCard_name">
+                                            Myrtilles et pâte d’amande
+                                        </p>
+                                        <p class="menuCard__price">
+                                            23€
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="menuCard__checkIcon">
-                                <div class="wrapIcon">
-                                    <i class="fas fa-check"></i>
+                                <div class="menuCard__checkIcon">
+                                    <div class="wrapIcon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
                                 </div>
-                            </div>
+                            </article>
                         </li>
                     </ol>
-                </div>
+                </section>
             </div>
             <div class="restaurantPage__orderButton">
                 <button>
@@ -265,7 +283,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="footer__link">
+                    <a href="mailto:contact@ohmyfood.com" class="footer__link">
                         Contact
                     </a>
                 </li>
