--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=fr>
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,25 +22,25 @@
             </a>
         </header>
         <main class="mainPage">
-            <div class="localisation">
+            <section class="localisation">
                 <i class="fas fa-map-marker-alt localisation__icon"></i>
-                <h2 class="localisation__title">
+                <h1 class="localisation__title">
                     Paris, Belleville
-                </h2>
-            </div>
-            <div class="exploration">
-                <h1 class="exploration__title">
-                    Réservez le menu qui vous convient
                 </h1>
+            </section>
+            <section class="exploration">
+                <h2 class="exploration__title">
+                    Réservez le menu qui vous convient
+                </h2>
                 <p>
                     Découvrez des restaurants d'exception, sélectionnés par nos soins.
                 </p>
                 <button class="exploration__button">
                     Explorer nos restaurants
                 </button>
-            </div>
-            <div class="fonctionnement">
-                <h1 class="fonctionnement__title">Fonctionnement</h1>
+            </section>
+            <section class="fonctionnement">
+                <h2 class="fonctionnement__title">Fonctionnement</h2>
                 <ol class="fonctionnement__stepsList">
                     <li class="fonctionnement__step">
                         <i class="fas fa-mobile-alt"></i>
@@ -61,104 +61,112 @@
                         </p>
                     </li>
                 </ol>
-            </div>
-            <div class="restaurants">
-                <h1 class="restaurants__title">
+            </section>
+            <section class="restaurants">
+                <h2 class="restaurants__title">
                     Restaurants
-                </h1>
+                </h2>
                 <ul class="restaurants__list">
                     <li class="restaurant">
-                        <a href="./la-palette-du-gout.html">
-                            <div class="restaurant__img">
-                                <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                                <span class="restaurant_new">
-                                    Nouveau
-                                </span>
-                            </div>
-                            <div class="restaurant__details">
-                                <div>
-                                    <h3 class="restaurant__title">
-                                        La palette du goût
-                                    </h3>
-                                    <p class="restaurant__localisation">
-                                        Ménilmontant
-                                    </p>
+                        <article>
+                            <a href="./la-palette-du-gout.html">
+                                <div class="restaurant__img">
+                                    <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                    <span class="restaurant_new">
+                                        Nouveau
+                                    </span>
                                 </div>
-                                <div class="restaurant__heart">
-                                    <i class="far fa-heart restaurant__heart--empty"></i>
-                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                <div class="restaurant__details">
+                                    <div>
+                                        <h3 class="restaurant__title">
+                                            La palette du goût
+                                        </h3>
+                                        <p class="restaurant__localisation">
+                                            Ménilmontant
+                                        </p>
+                                    </div>
+                                    <div class="restaurant__heart">
+                                        <i class="far fa-heart restaurant__heart--empty"></i>
+                                        <i class="fas fa-heart restaurant__heart--full"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </article>
                     </li>
                     <li class="restaurant">
-                        <a href="./la-note-enchantee.html">
-                            <div class="restaurant__img">
-                                <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                                <span class="restaurant_new">
-                                    Nouveau
-                                </span>
-                            </div>
-                            <div class="restaurant__details">
-                                <div>
-                                    <h3 class="restaurant__title">
-                                        La note enchantée
-                                    </h3>
-                                    <p class="restaurant__localisation">
-                                        Charonne
-                                    </p>
+                        <article>
+                            <a href="./la-note-enchantee.html">
+                                <div class="restaurant__img">
+                                    <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                                    <span class="restaurant_new">
+                                        Nouveau
+                                    </span>
                                 </div>
-                                <div class="restaurant__heart">
-                                    <i class="far fa-heart restaurant__heart--empty"></i>
-                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                <div class="restaurant__details">
+                                    <div>
+                                        <h3 class="restaurant__title">
+                                            La note enchantée
+                                        </h3>
+                                        <p class="restaurant__localisation">
+                                            Charonne
+                                        </p>
+                                    </div>
+                                    <div class="restaurant__heart">
+                                        <i class="far fa-heart restaurant__heart--empty"></i>
+                                        <i class="fas fa-heart restaurant__heart--full"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </article>
                     </li>
                     <li class="restaurant">
-                        <a href="./a-la-francaise.html">
-                            <div class="restaurant__img">
-                                <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                            </div>
-                            <div class="restaurant__details">
-                                <div>
-                                    <h3 class="restaurant__title">
-                                        À la française
-                                    </h3>
-                                    <p class="restaurant__localisation">
-                                        Cité Rouge
-                                    </p>
+                        <article>
+                            <a href="./a-la-francaise.html">
+                                <div class="restaurant__img">
+                                    <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                                 </div>
-                                <div class="restaurant__heart">
-                                    <i class="far fa-heart restaurant__heart--empty"></i>
-                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                <div class="restaurant__details">
+                                    <div>
+                                        <h3 class="restaurant__title">
+                                            À la française
+                                        </h3>
+                                        <p class="restaurant__localisation">
+                                            Cité Rouge
+                                        </p>
+                                    </div>
+                                    <div class="restaurant__heart">
+                                        <i class="far fa-heart restaurant__heart--empty"></i>
+                                        <i class="fas fa-heart restaurant__heart--full"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </article>
                     </li>
                     <li class="restaurant">
-                        <a href="./le-delice-des-sens.html">
-                            <div class="restaurant__img">
-                                <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                            </div>
-                            <div class="restaurant__details">
-                                <div>
-                                    <h3 class="restaurant__title">
-                                        Le délice des sens
-                                    </h3>
-                                    <p class="restaurant__localisation">
-                                        Folie-Méricourt
-                                    </p>
+                        <article>
+                            <a href="./le-delice-des-sens.html">
+                                <div class="restaurant__img">
+                                    <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                                 </div>
-                                <div class="restaurant__heart">
-                                    <i class="far fa-heart restaurant__heart--empty"></i>
-                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                <div class="restaurant__details">
+                                    <div>
+                                        <h3 class="restaurant__title">
+                                            Le délice des sens
+                                        </h3>
+                                        <p class="restaurant__localisation">
+                                            Folie-Méricourt
+                                        </p>
+                                    </div>
+                                    <div class="restaurant__heart">
+                                        <i class="far fa-heart restaurant__heart--empty"></i>
+                                        <i class="fas fa-heart restaurant__heart--full"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </article>
                     </li>
                 </ul>
-            </div>
+            </section>
         </main>
         <footer class="footer">
             <h2 class="footer__title">
@@ -183,7 +191,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="footer__link">
+                    <a href="mailto:contact@ohmyfood.com" class="footer__link">
                         Contact
                     </a>
                 </li>
